buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.flywaydb:flyway-database-postgresql:12.10.0'
    }
}

plugins {
    id 'org.springframework.boot' version '4.1.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.flywaydb.flyway' version '12.10.0' apply false
}

group = 'de.pnnit'
version = '0.0.1-SNAPSHOT'
description = 'Directwerk'

repositories {
    mavenCentral()
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.withType(JavaCompile).configureEach {
        // Retain method parameter names for Spring @Bean injection by name
        // (needed in Docker/CI builds; IDE bootRun often has this implicitly).
        options.compilerArgs.add('-parameters')
    }

    apply plugin: 'jacoco'

    jacoco {
        toolVersion = '0.8.12'
    }

    tasks.named('test') {
        useJUnitPlatform()
        // Test workers default to -Xmx512m (Gradle default, nothing overrides
        // it here). A single full-app Spring context needs several hundred MB;
        // with ~30 of them cached in one fork the suite OOMs (see #154).
        // 2g fits local dev (62 GB) and CI runners (16 GB) comfortably.
        maxHeapSize = '2g'
        finalizedBy tasks.named('jacocoTestReport')
    }

    tasks.named('jacocoTestReport') {
        dependsOn tasks.named('test')
        reports {
            xml.required = true
            html.required = true
        }
    }
}
